.kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: fritata-ingress
spec:
    ingressClassName: nginx
    rules:
        - http:
              paths:
                  - path: /api/v1/auth
                    pathType: Prefix
                    backend:
                        service:
                            name: fritata-backend-auth
                            port:
                                number: 8000
                  - path: /api/v1/users
                    pathType: Prefix
                    backend:
                        service:
                            name: fritata-backend-users-external
                            port:
                                number: 8010
                  - path: /api/v1/posts
                    pathType: Prefix
                    backend:
                        service:
                            name: fritata-backend-posts
                            port:
                                number: 8020
